ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"labels":{"kcert.dev/ingress":"managed"},"name":"k8s-dashboard","namespace":"kubernetes-dashboard"},"spec":{"rules":[{"host":"cluster.tfg.es","http":{"paths":[{"backend":{"service":{"name":"kubernetes-dashboard","port":{"number":443}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2023-07-28T14:52:04Z"
  generation: 1
  labels:
    kcert.dev/ingress: managed
  name: k8s-dashboard
  namespace: kubernetes-dashboard
  resourceVersion: "1390454"
  uid: 7f4b042d-7c86-430c-9db7-855016aa17d0
spec:
  rules:
  - host: cluster.tfg.es
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 147.96.81.119
